adding memory constraints